# glam-app

./: .editorconfig  .env  .env.example  .gitignore  .pre-commit-config.yaml  Alerts  Cleanup  Database  Makefile  Processing  README.md  Testing  TimescaleDB  clean_up_stream.py  docker-compose-core-DL.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.vultr.yml  docker-compose.yml  glam-app.code-workspace  pyproject.toml  setup-monitoring.sh  test.http  test_nats_connection.py
services/analytics-service/: .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
services/analytics-service/prisma/: schema.prisma
services/analytics-service/src/: config.py  dependencies.py  exceptions.py  lifecycle.py  main.py
services/analytics-service/src/api/: router.py
services/analytics-service/src/events/: listeners.py  publishers.py  subscribers.py  types.py
services/analytics-service/src/jobs/: aggregation_jobs,py
services/analytics-service/src/mappers/: analytics_mapper.py
services/analytics-service/src/models/: analytics.py  enums.py
services/billing-service/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
services/billing-service/alembic/: alembic.ini  env.py
services/billing-service/prisma/: schema.prisma
services/billing-service/src/: config.py  dependencies.py  exceptions.py  lifecycle.py  main.py
services/billing-service/src/api/: __init__.py  (+1 more)
services/catalog-ai-analyzer/: Dockerfile  pyproject.toml
services/catalog-ai-analyzer/src/: config.py  exceptions.py  lifecycle.py  main.py
services/catalog-ai-apparel/: Dockerfile  README.md  pyproject.toml
services/catalog-ai-apparel/scripts/: test_catalog_analysis.py
services/catalog-ai-apparel/src/: config.py  dependencies.py  lifecycle.py  main.py
services/catalog-ai-apparel/tests/: conftest.py
services/catalog-connector/: .env.examples  Dockerfile  pyproject.toml
services/catalog-connector/src/: __init__.py  config.py  dependencies.py  exceptions.py  lifecycle.py  main.py
services/credit-service/: .env.example  .env.examples  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
services/credit-service/alembic/: env.py
services/credit-service/monitoring/: prometheus.yml
services/credit-service/prisma/: schema.prisma
services/credit-service/scripts/: test_credits.py
services/credit-service/src/: config.py  dependencies.py  exceptions.py  lifecycle.py  main.py  metrics.py  utils.py
services/credit-service/tests/: conftest.py
services/merchant-service/: .pre-commit-config.yaml  .pre-commit-config.yml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
services/merchant-service/alembic/: README.md  alembic.ini  env.py
services/merchant-service/prisma/: schema.prisma
services/merchant-service/src/: config.py  dependencies.py  exceptions.py  lifecycle.py  main.py
services/notification-service/: Dockerfile  README.md  pyproject.toml
services/notification-service/alembic/: alembic.ini
services/notification-service/migrations/: env.py
services/notification-service/prisma/: schema.prisma
services/notification-service/src/: config.py  dependencies.py  exceptions.py  lifecycle.py  main.py  metrics.py  middlewares.py
services/notification-service/templates/: __init__.py
services/profile-ai-selfie/: Dockerfile  pyproject.toml
services/profile-service/: Dockerfile  pyproject.toml
services/scheduler-service/: .env.example  README.md  pyproject.toml
services/scheduler-service/src/: dependencies.py  exceptions.py  lifecycle.py  main.py  metrics.py
services/season-compatibility-service/: pyproject.toml
services/season-compatibility-service/prisma/: schema.prisma
services/season-compatibility-service/src/: config.py  dependencies.py  lifecycle.py  main.py  season_palettes.py
services/selfie-service/: Dockerfile  pyproject.toml
services/selfie-service/prisma/: schema.prisma
services/selfie-service/src/: config.py  dependencies.py  exceptions.py  lifecycle.py  main.py  tasks.py
services/token-service/: Dockerfile  pyproject.toml
services/token-service/prisma/: schema.prisma
services/token-service/src/: config.py  dependencies.py  exceptions.py  lifecycle.py  main.py
services/webhook-service/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  docker_compose.yml  pyproject.toml
services/webhook-service/alembic/: alembic.ini  env.py
services/webhook-service/prisma/: schema.prisma
services/webhook-service/scripts/: load_test.py  setup_shopify_webhooks.py  test_webhook.py  validate_event_context.py
services/webhook-service/src/: __init__.py  config.py  dependencies.py  exceptions.py  lifecycle.py  main.py  metrics.py
services/webhook-service/tests/: __init__.py  conftest.py
shared/: README.md  pyproject.toml
shared/shared/: config_loader.py
shared/shared/api/: __init__.py  correlation.py  debug.py  dependencies.py  handlers.py  health.py  internal_client.py  middleware.py  models.py  responses.py  tracing.py  validation.py
shared/shared/config/: loader.py
shared/shared/database/: __init__.py  base.py  config.py  dependencies.py  migrations.py  repository.py  session.py
shared/shared/errors/: __init__.py  analysis.py  base.py  catalog.py  handlers.py  infrastructure.py  middleware.py  notification.py  profile.py  selfie.py  utils.py
shared/shared/events/: __init__.py  base.py  base_publisher.py  base_subscriber.py  context.py  mappers.py  types.py
shared/shared/mappers/: __init__.py  base.py  crud_mapper.py
shared/shared/messaging/: __init__.py  dependencies.py  event_context.py  jetstream_client.py  jetstream_wrapper.py  listener.py  publisher.py  stream_config.py  subjects.py  subscriber.py
shared/shared/metrics/: __init__.py  middleware.py
shared/shared/utils/: __init__.py  config_loader.py  exceptions.py  idempotency_key.py  idempotency_key_generator.py  logger.py  query_helpers.py
(+657 files in other folders)
