[tool.poetry]
name = "analytics-service"
version = "0.1.0"
description = "analytics-service microservice for GLAM platform"
authors = ["GLAM Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109"
uvicorn = {extras = ["standard"], version = "==0.35.0"}
pydantic = "^2.11.7"
prisma = "^0.11.0"
shared = {path = "../../shared", develop = true}
tenacity = "^9.1.2"
apscheduler = "^3.11.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
