[tool.poetry]
name = "billing-service"
version = "1.0.0"
description = "Billing service for trial and billing management"
authors = ["GlamYouUp Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "==0.35.0"}
pydantic = "^2.5.0"
nats-py = "^2.6.0"
shared = { path = "../../shared", develop = true }
alembic = "^1.17.0"
psycopg2-binary = "^2.9.11"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.44"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
