[tool.poetry]
name = "catalog-ai-analyzer"
version = "0.1.0"
description = "catalog-ai-analyzer microservice for GLAM platform"
authors = ["GLAM Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
