[tool.poetry]
name = "catalog-ai-analyzer"
version = "0.1.0"
description = "catalog-ai-analyzer microservice for GLAM platform"
authors = ["GLAM Team"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
uvicorn = {extras = ["standard"], version = "==0.35.0"}
