[tool.poetry]
name = "catalog-analysis"
version = "1.0.0"
description = "AI-powered catalog item analysis and color extraction service for apparel"
authors = ["GlamYouUp Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
nats-py = "^2.6.0"
redis = "^5.0.1"
opencv-python = "^4.8.1"
mediapipe = "^0.10.16"
scikit-learn = "^1.3.0"
numpy = "^1.24.0"
python-dotenv = "^1.0.0"
shared = { path = "../../shared", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
