[tool.poetry]
name = "connector-service"
version = "0.1.0"
description = "Connector Service for GLAM - Shopify integration"
authors = ["GLAM Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
shared = {path = "../../shared", develop = true}
httpx = "^0.25.2"
redis = "^5.0.1"
cryptography = "^41.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.1"
pre-commit = "^3.5.0"
factory-boy = "^3.3.0"
faker = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "UP", "YTT", "BLE", "B", "A", "COM", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "INP", "PIE", "PT", "RSE", "SIM", "TID", "ARG", "ERA", "PD", "PGH", "PL", "TRY", "RUF"]
ignore = ["E501", "B008", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]