[tool.poetry]
name = "credit-service"
version = "1.0.0"
description = "Credit balance accounting service"
authors = ["GlamYouUp Team"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
prisma = "^0.11.0"
pydantic = "^2.5.0"
shared = {path = "../../shared", develop = true}
fastapi = "^0.109.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
