[tool.poetry]
name = "credit-service"
version = "1.0.0"
description = "Credit balance accounting service"
authors = ["GlamYouUp Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "==0.35.0"}
pydantic = "^2.5.0"
shared = {path = "../../shared", develop = true}
fastapi = "^0.109.0"
sqlalchemy = "^2.0.44"
psycopg2-binary = "^2.9.11"
alembic = "^1.17.0"
httpx = "^0.28.1"
asyncpg = "^0.30.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
