[tool.poetry]
name = "notification-service"
version = "1.0.0"
description = "Email notification service for GlamYouUp platform"
authors = ["GlamYouUp Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
alembic = "^1.13.0"
nats-py = "^2.6.0"
redis = "^5.0.1"
jinja2 = "^3.1.2"
email-validator = "^2.1.0"
python-multipart = "^0.0.6"
httpx = "^0.25.2"
croniter = "^2.0.1"  # For cron expression parsing
pytz = "^2023.3"  # For timezone support
python-jose = {extras = ["cryptography"], version = "^3.3.0"}  # For JWT
python-dotenv = "^1.0.0"  # For .env file support
shared = { path = "../../shared", develop = true }
# Email providers
boto3 = "^1.34.0"  # For AWS SES
sendgrid = "^6.11.0"  # For SendGrid
aiosmtplib = "^3.0.1"  # For SMTP
# Shared package is installed from local path in Dockerfile

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
faker = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true