# services/notification-service/pyproject.toml
[tool.poetry]
name = "notification-service"
version = "1.0.0"
description = "Event-driven email notification service"
authors = ["GLAM Team <team@glamyouup.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
prisma = "^0.11.0"
pydantic = {extras = ["email"], version = "^2.11.7"}
jinja2 = "^3.1.2"
shared = {path = "../../shared", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
