# services/profile-ai-selfie/pyproject.toml
[tool.poetry]
name = "profile-ai-selfie"
version = "1.0.0"
description = "AI-powered selfie analysis for seasonal color typing"
authors = ["GlamYouUp Team"]

[tool.poetry.dependencies]
python = "^3.11"
nats-py = "^2.6.0"
onnxruntime = "^1.16.3"
onnxruntime-gpu = {version = "^1.16.3", optional = true}
opencv-python = "^4.8.1"
numpy = "^1.26.2"
pillow = "^10.1.0"
insightface = "^0.7.3"
scikit-learn = "^1.3.2"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
structlog = "^23.2.0"
redis = "^5.0.1"
boto3 = "^1.29.0"
aiofiles = "^23.2.1"

[tool.poetry.extras]
gpu = ["onnxruntime-gpu"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "N", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true