# services/profile-ai-selfie/pyproject.toml
[tool.poetry]
name = "profile-ai-selfie"
version = "1.0.0"
description = "AI-powered selfie analysis for seasonal color typing"
authors = ["GlamYouUp Team"]

[tool.poetry.dependencies]
python = "^3.11"
nats-py = "^2.6.0"
onnxruntime = "^1.16.3"
onnxruntime-gpu = {version = "^1.16.3", optional = true}
opencv-python = "^4.8.1"
numpy = "^1.26.2"
pillow = "^10.1.0"
insightface = "^0.7.3"
scikit-learn = "^1.3.2"
pydantic = "^2.5.0"
structlog = "^23.2.0"
aiofiles = "^23.2.1"

[tool.poetry.extras]
gpu = ["onnxruntime-gpu"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
