# services/profile-service/pyproject.toml
[tool.poetry]
name = "profile-service"
version = "1.0.0"
description = "User profile management service for GlamYouUp"
authors = ["GlamYouUp Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
nats-py = "^2.6.0"
asyncpg = "^0.29.0"
boto3 = "^1.29.0"
aiofiles = "^23.2.1"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
structlog = "^23.2.0"
pillow = "^10.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
