[tool.poetry]
name = "selfie-service"
version = "0.1.0"
description = "selfie-service microservice for GLAM platform"
authors = ["GLAM Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
pydantic = "^2.11.7"
prisma = "^0.15.0"
numpy = "^2.3.2"
scipy = "^1.16.1"
shared = {path = "../../shared", develop = true}


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
