[tool.poetry]
name = "selfie-service"
version = "0.1.0"
description = "selfie-service microservice for GLAM platform"
authors = ["GLAM Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
pydantic = "^2.11.7"
prisma = "^0.15.0"
shared = {path = "../../shared", develop = true}
pillow = "^11.3.0"
httpx = "^0.28.1"
opencv-python-headless = "^4.12.0.88"
nats-py = "^2.11.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
